--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
