--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
+    "react-spinners": "^0.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
